results/archive/b60/compile_winograd_output_transform_kernel.dp_20260309_124423.log
Exit code: 1
Compiler flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u
=== STDOUT ===
=== SYCL Compilation for Intel XPU (BMG Support) ===
Timestamp: 20260309_124423
Kernel: winograd_output_transform_kernel.dp
Source: /workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp
Compiler: icpx
Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u

Step 1: Compiling source to object file...
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:58:12: error: use of undeclared identifier '__expf'
   58 |   auto e = __expf(el);
      |            ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:79:14: error: use of undeclared identifier 'tanh'; did you mean 'sycl::tanh'?
   79 |       cVal = tanh(cVal);
      |              ^~~~
      |              sycl::tanh
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/builtins/math_functions.inc:148:23: note: 'sycl::tanh' declared here
  148 | BUILTIN_GENF(ONE_ARG, tanh)
      |                       ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:82:29: error: use of undeclared identifier '__expf'
   82 |       cVal = 1.0f / (1.0f + __expf(-cVal));
      |                             ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:89:33: error: use of undeclared identifier '__expf'
   89 |         cVal = scale * alpha * (__expf(cVal) - 1.0f);
      |                                 ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:96:23: error: use of undeclared identifier '__expf'
   96 |       cVal /= (1.0f + __expf(-cVal));
      |                       ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:103:7: error: use of undeclared identifier '__trap'
  103 |       __trap();
      |       ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:161:11: error: use of undeclared identifier 'item'
  161 |   int k = item.get_local_id(0);
      |           ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:162:11: error: use of undeclared identifier 'item'
  162 |   int n = item.get_group(0);
      |           ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:178:42: error: use of undeclared identifier 'GemmN'
  178 |           outElTransformed[y][x] = input[TEMP_INDEX_HWNC(y, x, shln, k)];
      |                                          ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:140:12: note: expanded from macro 'TEMP_INDEX_HWNC'
  140 |   ((h)*6 * GemmN * C + (w)*GemmN * C + (n)*C + c)
      |            ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:178:42: error: use of undeclared identifier 'GemmN'
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:140:28: note: expanded from macro 'TEMP_INDEX_HWNC'
  140 |   ((h)*6 * GemmN * C + (w)*GemmN * C + (n)*C + c)
      |                            ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:203:5: error: unknown type name '__shared__'
  203 |     __shared__ float shared_data[1024];
      |     ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:206:5: error: use of undeclared identifier 'item'; did you mean 'sycl::item'?
  206 |     item.barrier();
      |     ^~~~
      |     sycl::item
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/item.hpp:37:62: note: 'sycl::item' declared here
   37 | template <int Dimensions = 1, bool with_offset = true> class item {
      |                                                              ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:206:5: error: use of undeclared identifier 'item'; did you mean 'sycl::item'?
  206 |     item.barrier();
      |     ^~~~
      |     sycl::item
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/item.hpp:37:62: note: 'sycl::item' declared here
   37 | template <int Dimensions = 1, bool with_offset = true> class item {
      |                                                              ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:206:5: error: unknown type name 'item'
  206 |     item.barrier();
      |     ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:206:9: error: cannot use dot operator on a type
  206 |     item.barrier();
      |         ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:217:5: error: use of undeclared identifier 'item'; did you mean 'sycl::item'?
  217 |     item.barrier();
      |     ^~~~
      |     sycl::item
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/item.hpp:37:62: note: 'sycl::item' declared here
   37 | template <int Dimensions = 1, bool with_offset = true> class item {
      |                                                              ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:217:5: error: use of undeclared identifier 'item'; did you mean 'sycl::item'?
  217 |     item.barrier();
      |     ^~~~
      |     sycl::item
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/item.hpp:37:62: note: 'sycl::item' declared here
   37 | template <int Dimensions = 1, bool with_offset = true> class item {
      |                                                              ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:217:5: error: unknown type name 'item'
  217 |     item.barrier();
      |     ^
/workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp:217:9: error: cannot use dot operator on a type
  217 |     item.barrier();
      |         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
[ERROR] Compilation step 1 failed with exit code 1

=== STDERR ===
+ echo '=== SYCL Compilation for Intel XPU (BMG Support) ==='
+ echo 'Timestamp: 20260309_124423'
+ echo 'Kernel: winograd_output_transform_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64'
+ echo 'Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '\''-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'\'''
+ echo 'AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Step 1: Compiling source to object file...'
+ icpx -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64 -c /workspace/kernel_dataset/sycl/winograd_output_transform_kernel.dp.cpp -o /workspace/build_sycl/winograd_output_transform_kernel.dp.o
+ tee /workspace/results/b60/compile_winograd_output_transform_kernel.dp_20260309_124423.log.step1
+ STEP1_EXIT=1
+ '[' 1 -ne 0 ']'
+ echo '[ERROR] Compilation step 1 failed with exit code 1'
+ exit 1
